--- a/resources/views/surat/surat.html
+++ b/resources/views/surat/surat.html
@@ -126,8 +126,8 @@
 
       <tr>
 
-        <td> <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Coat_of_arms_of_South_Sumatra.svg"
-            width="140px">
+        <td style="text-align: center;"> <img
+            src="https://upload.wikimedia.org/wikipedia/commons/4/45/Coat_of_arms_of_South_Sumatra.svg" width="95px">
         </td>
 
         <td class="tengah">
