--- a/resources/views/surat/tabel.html
+++ b/resources/views/surat/tabel.html
@@ -254,10 +254,10 @@
       <tr>
         <th rowspan="3" style="width: 130px; vertical-align: middle;">Kode Rekening
         </th>
-        <th rowspan="3" style="width: 500px; vertical-align: middle;">Uraian</th>
+        <th rowspan="3" style="width: 150px; vertical-align: middle;">Uraian</th>
         <th colspan="10">Rincian Perhitungan</th>
         <th rowspan="3" style="max-width: 150px; vertical-align: middle;">
-          Bertambah / Berkurang</th>
+          Bertambah/<br>Berkurang</th>
 
       </tr>
       <tr>
@@ -284,9 +284,7 @@
           <strong>Rekening</strong>
         </td>
         <td>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi praesentium dolorem, in aliquid
-          dolore similique possimus hic maxime suscipit quam, incidunt eveniet minima quisquam numquam ipsum
-          consequuntur sed unde!
+          Lorem ipsum dolor sit amet
         </td>
         <td>
           SBM V
