--- a/resources/views/surat/tabel.html
+++ b/resources/views/surat/tabel.html
@@ -326,6 +326,16 @@
       </tr>
     </tfoot>
   </table>
+
+  <!-- Tabel 3 -->
+  <table style="width: 100%;">
+    <tbody>
+      <tr>
+        <td colspan="2">Rencana Realisasi Belanja per Bulan *) <br> (Rp)</td>
+        <td rowspan="14"></td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
